bug fixed: changed css link in index.html from href --> src to get rid of error in browser

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,3 +4,21 @@
   box-sizing: border-box;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+#navBar {
+  padding: 8px;
+  text-align: center;
+  width: 100vw;
+  position: sticky;
+  top: 0px;
+}
+
+#navBar a {
+  color: black;
+  margin: 5px;
+}
+
+#navBar a:hover {
+  color: maroon;
+  margin: 5px;
+}
