--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,7 +1,8 @@
 *,
 *::before,
 *::after {
+  background-color: aqua;
+  margin: 0;
   box-sizing: border-box;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
