refactored: styles moved from Nav.js component into style.less

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -4,6 +4,24 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+#navBar {
+  padding: 8px;
+  text-align: center;
+  width: 100vw;
+  position: sticky;
+  top: 0px;
+  display: flex;
+  justify-content: space-between;
+  justify-items: space-between;
+  background-color: gray;
+}
+
+#navBar > * {
+    display: flex;
+    justify-content: space-evenly;
+justify-items: space-evenly;
+}
+
 a {
   color: black;
   margin: 5px;
@@ -16,6 +34,7 @@ a:hover {
 
 li {
   display: inline-block;
+  text-align: left;
   }
    
 li:hover {
