--- a/public/style/style.css
+++ b/public/style/style.css
@@ -5,6 +5,22 @@
   box-sizing: border-box;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+#navBar {
+  padding: 8px;
+  text-align: center;
+  width: 100vw;
+  position: sticky;
+  top: 0px;
+  display: flex;
+  justify-content: space-between;
+  justify-items: space-between;
+  background-color: gray;
+}
+#navBar > * {
+  display: flex;
+  justify-content: space-evenly;
+  justify-items: space-evenly;
+}
 a {
   color: black;
   margin: 5px;
@@ -15,6 +31,7 @@ a:hover {
 }
 li {
   display: inline-block;
+  text-align: left;
 }
 li:hover {
   cursor: pointer;
