refactored: navBar styling redundancy deleted

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -30,16 +30,14 @@
   background-color: green;
 }
 
+// for every li under the navBar element
 #navBar li {
   display: inline-block;
-}
-
-#navBar > ul {
-  padding: 0;
-}
-
-#navBar ul li {
   padding: 15px;
+}
+
+#navBar ul {
+  padding: 0;
 }
    
 #navBar li ul {
@@ -49,7 +47,6 @@
   position: absolute;
   margin-top: 25px;
   margin-left: -15px;
-  padding: 0;
   display: none;
   box-shadow: 2px 2px 2px black;
 }
