--- a/public/src/style.less
+++ b/public/src/style.less
@@ -4,11 +4,14 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+// !!! navBar STYLING BEGINS HERE !!! 
+@navHeight: 60px;
+@navPadding: 15px;
 // makes sure the nav bar stays at the top of the page 
 #navBar {
   text-align: center;
   width: 100vw;
-  height: 60px;
+  height: @navHeight;
   position: sticky;
   top: 0px;
   display: flex;
@@ -16,14 +19,12 @@
   background-color: gray;
 }
 
-// !!! navBar STYLING BEGINS HERE !!! 
-
 // the child elements of navBar are also flex (home link, and other links)
 #navBar > * {
   display: flex;
   justify-content: space-evenly;
-  height: 60px;
-  padding: 15px;
+  height: @navHeight;
+  padding: @navPadding;
   color: black;
 }
 
@@ -35,7 +36,7 @@
 // for every li under the navBar element
 #navBar li {
   display: inline-block;
-  padding: 15px;
+  padding: @navPadding;
 }
 
 // makes sure the the dropdown and navBar RHS only us li padding/margins
@@ -51,9 +52,9 @@
   opacity: 0;
   position: absolute;
   margin-top: 25px;
-  margin-left: -15px;
+  margin-left: -(@navPadding);
   display: none;
-  box-shadow: 2px 2px 2px black;
+  box-shadow: 2px 2px 2px 2px black;
 }
    
 // css that allows for 'dropdown' functionality
