refactored: nav.less created for nav styling, and padding adjusted

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -4,71 +4,5 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-// !!! navBar STYLING BEGINS HERE !!! 
-@navHeight: 60px;
-@navPadding: 15px;
-// makes sure the nav bar stays at the top of the page 
-#navBar {
-  text-align: center;
-  width: 100vw;
-  height: @navHeight;
-  position: sticky;
-  top: 0px;
-  display: flex;
-  justify-content: space-between;
-  background-color: gray;
-}
-
-// the child elements of navBar are also flex (home link, and other links)
-#navBar > * {
-  display: flex;
-  justify-content: space-evenly;
-  height: @navHeight;
-  padding: @navPadding;
-  color: black;
-}
-
-// when user hovers over any link in nav; li covers all of padding as well
-#navBar a:hover, #navBar li:hover {
-  background-color: green;
-}
-
-// for every li under the navBar element
-#navBar li {
-  display: inline-block;
-  padding: @navPadding;
-}
-
-// makes sure the the dropdown and navBar RHS only us li padding/margins
-#navBar ul {
-  padding: 0;
-  margin: 0;
-}
-   
-// the dropdown boxes in the navBar
-#navBar li ul {
-  background-color: yellow;
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  margin-top: 25px;
-  margin-left: -(@navPadding);
-  display: none;
-  box-shadow: 2px 2px 2px 2px black;
-}
-   
-// css that allows for 'dropdown' functionality
-#navBar li:hover > ul,
-#navBar li ul:hover {
-  visibility: visible;
-  opacity: 1;
-  display: block;
-}
-   
-// each element under the dropdown ul
-#navBar li ul li {
-  clear: both;
-  width: 100%;
-}
-
-// !!! navBar STYLING ENDS HERE !!!
+// nav bar styling
+@import "./nav.less";
