--- a/public/style/style.css
+++ b/public/style/style.css
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: space-evenly;
   height: 60px;
-  padding: 15px;
+  padding: 15px 30px;
   color: black;
 }
 #navBar a:hover,
@@ -28,7 +28,7 @@
 }
 #navBar li {
   display: inline-block;
-  padding: 15px;
+  padding: 15px 30px;
 }
 #navBar ul {
   padding: 0;
@@ -40,7 +40,7 @@
   opacity: 0;
   position: absolute;
   margin-top: 25px;
-  margin-left: -15px;
+  margin-left: -30px;
   display: none;
   box-shadow: 2px 2px 2px 2px black;
 }
