--- a/public/src/nav.less
+++ b/public/src/nav.less
@@ -6,7 +6,7 @@
 // makes sure the nav bar stays at the top of the page 
 #navBar, #footer {
   text-align: center;
-  width: 100vw;
+  max-width: 100vw;
   height: @navHeight;
   position: sticky;
   top: 0px;
