--- a/public/src/style.less
+++ b/public/src/style.less
@@ -4,5 +4,10 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+body {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 // nav bar styling
 @import "./nav.less";
