--- a/public/style/style.css
+++ b/public/style/style.css
@@ -68,3 +68,12 @@ body {
   font-size: 12px;
   height: 45px;
 }
+#content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#content > * {
+  width: 85vw;
+  margin: 20px;
+}
