--- a/public/style/style.css
+++ b/public/style/style.css
@@ -6,7 +6,7 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 body {
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 #navBar,
