feature: footer positioning styled

--- a/public/src/nav.less
+++ b/public/src/nav.less
@@ -81,3 +81,12 @@
   font-size: 12px;
   height: 45px;
 }
+
+#footer {
+  height: @navHeight;
+  width: 100vw;
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  background-color: gray;
+}
