--- a/public/src/style.less
+++ b/public/src/style.less
@@ -10,6 +10,9 @@
 body {
   overflow-y: auto;
   overflow-x: hidden;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 // nav bar styling
