--- a/public/src/home.less
+++ b/public/src/home.less
@@ -1,12 +1,13 @@
 // began styling for homepage
-#content {
+.content {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 // inside content there are only children of 2 divs
-#content > * {
+.content > * {
   width: 85vw;
   margin: 20px;
 }
