--- a/public/style/style.css
+++ b/public/style/style.css
@@ -8,6 +8,9 @@
 body {
   overflow-y: auto;
   overflow-x: hidden;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 #navBar,
 #footer {
@@ -68,12 +71,21 @@ body {
   font-size: 12px;
   height: 45px;
 }
-#content {
+#footer {
+  height: 60px;
+  width: 100vw;
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  background-color: gray;
+}
+.content {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-#content > * {
+.content > * {
   width: 85vw;
   margin: 20px;
 }
