--- a/public/src/style.less
+++ b/public/src/style.less
@@ -20,3 +20,11 @@ body {
 
 // homepage styling
 @import "./home.less";
+
+@import "./cardSmallView.less";
+
+.contentContainer {
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+}
