--- a/public/style/style.css
+++ b/public/style/style.css
@@ -88,3 +88,18 @@ body {
   width: 85vw;
   margin: 20px;
 }
+.innerContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 200px;
+  margin: 10px;
+}
+.innerContainer img {
+  width: 180px;
+}
+.contentContainer {
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+}
