--- a/public/style/style.css
+++ b/public/style/style.css
@@ -98,6 +98,35 @@ body {
 .innerContainer img {
   width: 180px;
 }
+.singleProductContainer {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  align-items: center;
+}
+.singleProduct {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+  padding: 12px;
+}
+.productInfo {
+  display: flex;
+  height: 100%;
+  justify-content: space-around;
+}
+.singleProduct img {
+  height: 55%;
+  width: 55%;
+}
+.singleProduct button:hover {
+  transform: scale(1.3, 1.3);
+  -webkit-transform: scale(1.3, 1.3);
+  -moz-transform: scale(1.3, 1.3);
+}
 .contentContainer {
   width: 1100px;
   display: flex;
