feature: filtering option buttons persist on rerender but will reset after moving to another component

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -23,6 +23,8 @@ body {
 
 @import "./cardSmallView.less";
 
+@import "./filterOptions.less";
+
 .contentContainer {
   width: 1100px;
   display: flex;
