--- a/public/src/style.less
+++ b/public/src/style.less
@@ -26,7 +26,8 @@ body {
 @import "./filterOptions.less";
 
 .contentContainer {
-  width: 1100px;
+  width: 85vw;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
