--- a/public/style/style.css
+++ b/public/style/style.css
@@ -132,7 +132,8 @@ body {
   padding: 2% 0px;
 }
 .contentContainer {
-  width: 1100px;
+  width: 85vw;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
