--- a/public/src/style.less
+++ b/public/src/style.less
@@ -40,10 +40,14 @@ body {
   padding: 12px;
 }
 
-.productInfo {
+.singleProductInfo {
   display: flex;
-  height: 100%;
-  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  width: 50%;
+  height: 120vh;
+  padding: 12px;
+  justify-content: space-evenly;
 }
 
 .singleProduct img {
