--- a/public/style/style.css
+++ b/public/style/style.css
@@ -113,10 +113,14 @@ body {
   height: 100%;
   padding: 12px;
 }
-.productInfo {
+.singleProductInfo {
   display: flex;
-  height: 100%;
-  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  width: 50%;
+  height: 120vh;
+  padding: 12px;
+  justify-content: space-evenly;
 }
 .singleProduct img {
   height: 55%;
