bug fixed: filterOptions imported into style.less

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -23,6 +23,8 @@ body {
 
 @import "./cardSmallView.less";
 
+@import "./filterOptions.less";
+
 .singleProductContainer {
   display: flex;
   height: 100%;
