bug fixed: file-loader added for React to handle static images

--- a/public/src/home.less
+++ b/public/src/home.less
@@ -3,10 +3,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0px 80px;
 }
 
-// inside content there are only children of 2 divs
-.content > * {
-  width: 85vw;
-  margin: 20px;
+#bannerImg {
+  width: 100%;
+  height: 700px;
+  // background-image: url("../pokemontcg_banner.jpg");
+  // background-size: 100%;
+}
+
+#bannerShop {
+  position: relative;
 }
