--- a/public/style/style.css
+++ b/public/style/style.css
@@ -83,10 +83,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0px 80px;
 }
-.content > * {
-  width: 85vw;
-  margin: 20px;
+#bannerImg {
+  width: 100%;
+  height: 700px;
+}
+#bannerShop {
+  position: relative;
 }
 .innerContainer {
   display: flex;
