feature: banner image loads!!!

--- a/public/src/home.less
+++ b/public/src/home.less
@@ -6,13 +6,21 @@
   margin: 0px 80px;
 }
 
+// CSS FOR HOMEPAGE BANNER IMAGE
 #bannerImg {
   width: 100%;
   height: 700px;
-  // background-image: url("../pokemontcg_banner.jpg");
-  // background-size: 100%;
+}
+
+#bannerImg img {
+  width: 100%;
 }
 
 #bannerShop {
+  font-size: 1.4em;
+  padding: 13px;
   position: relative;
+  bottom: 15%;
+  left: 8%; 
 }
+
