--- a/public/style/style.css
+++ b/public/style/style.css
@@ -89,8 +89,15 @@ body {
   width: 100%;
   height: 700px;
 }
+#bannerImg img {
+  width: 100%;
+}
 #bannerShop {
+  font-size: 1.4em;
+  padding: 13px;
   position: relative;
+  bottom: 15%;
+  left: 8%;
 }
 .innerContainer {
   display: flex;
