feature: info bar w/ icons added to Home. positioning required

--- a/public/src/home.less
+++ b/public/src/home.less
@@ -9,7 +9,8 @@
 // CSS FOR HOMEPAGE BANNER IMAGE
 #bannerImg {
   width: 100%;
-  height: 700px;
+  height: 45vw;
+  margin: 0px;
 }
 
 #bannerImg img {
@@ -20,7 +21,23 @@
   font-size: 1.4em;
   padding: 13px;
   position: relative;
-  bottom: 15%;
+  bottom: 9vw;
   left: 8%; 
 }
+
+// CSS FOR INFO BELOW BANNER IMAGE
+#bannerInfo {
+  margin: 15px 0px;
+  background-color: rgb(182, 182, 182);
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#bannerInfo img {
+  height: 80px;
+}
+
 
