--- a/public/style/style.css
+++ b/public/style/style.css
@@ -87,7 +87,8 @@ body {
 }
 #bannerImg {
   width: 100%;
-  height: 700px;
+  height: 45vw;
+  margin: 0px;
 }
 #bannerImg img {
   width: 100%;
@@ -96,8 +97,20 @@ body {
   font-size: 1.4em;
   padding: 13px;
   position: relative;
-  bottom: 15%;
+  bottom: 9vw;
   left: 8%;
+}
+#bannerInfo {
+  margin: 15px 0px;
+  background-color: #b6b6b6;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#bannerInfo img {
+  height: 80px;
 }
 .innerContainer {
   display: flex;
@@ -223,4 +236,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+}
+button:hover {
+  background-color: mediumaquamarine;
 }
