--- a/public/src/nav.less
+++ b/public/src/nav.less
@@ -6,6 +6,7 @@
 // makes sure the nav bar stays at the top of the page
 #navBar,
 #footer {
+  z-index: 1000;
   text-align: center;
   max-width: 100vw;
   height: @navHeight;
