--- a/public/style/home.css
+++ b/public/style/home.css
@@ -6,7 +6,8 @@
 }
 #bannerImg {
   width: 100%;
-  height: 700px;
+  height: 45vw;
+  margin: 0px;
 }
 #bannerImg img {
   width: 100%;
@@ -15,10 +16,18 @@
   font-size: 1.4em;
   padding: 13px;
   position: relative;
-  bottom: 15%;
+  bottom: 9vw;
   left: 8%;
 }
 #bannerInfo {
+  margin: 15px 0px;
+  background-color: #b6b6b6;
+  width: 100%;
+  height: 200px;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+}
+#bannerInfo img {
+  height: 80px;
 }
