--- a/public/style/style.css
+++ b/public/style/style.css
@@ -14,6 +14,7 @@ body {
 }
 #navBar,
 #footer {
+  z-index: 1000;
   text-align: center;
   max-width: 100vw;
   height: 60px;
@@ -87,8 +88,10 @@ body {
 }
 #bannerImg {
   width: 100%;
-  height: 45vw;
+  height: 60%;
   margin: 0px;
+  position: relative;
+  z-index: 0;
 }
 #bannerImg img {
   width: 100%;
@@ -96,12 +99,12 @@ body {
 #bannerShop {
   font-size: 1.4em;
   padding: 13px;
-  position: relative;
-  bottom: 9vw;
-  left: 8%;
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  z-index: 1;
 }
 #bannerInfo {
-  margin: 15px 0px;
   background-color: #b6b6b6;
   width: 100%;
   height: 200px;
