--- a/public/src/style.less
+++ b/public/src/style.less
@@ -7,6 +7,14 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
+:root {
+  --primary-hsl: 0, 100%, 50%;
+  --primary-light-hsl: 0, 100%, 91%;
+  --primary-dark-hsl: 0, 100%, 6%;
+  --valid-hsl: 100, 60%, 50%;
+  --error-hsl: 0, 60%, 50%;
+}
+
 body {
   overflow-y: auto;
   overflow-x: hidden;
@@ -70,4 +78,130 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+}
+
+.full-screen-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-container {
+  .full-screen-container
+}
+
+.login-container {
+  --color: hsl(var(--primary-dark-hsl), .8);
+  background-color: var(--color);
+  box-shadow: 0 0 15px var(--color);
+  padding: 40px 30px;
+  width: 80%;
+  max-width: 600px;
+  border-radius: 20px;
+
+  label {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: white;
+      cursor: pointer;
+  }
+}
+
+.login-title {
+  margin: 0;
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: normal;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.input-login {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+
+.login-message {
+  color: white;
+  font-weight: lighter;
+  text-align: center;
+  padding: 1em;
+}
+
+.register-link {
+  color: white;
+  font-weight: lighter;
+  text-align: center;
+  padding: 2px;
+}
+
+.input-login label {
+  color: white;
+  font-weight: lighter;
+}
+
+.input-login input {
+  font-size: 1.25rem;
+  padding: .5em;
+  background-color: hsl(var(--primary-light-hsl), .3);
+  border: none;
+  outline: none;
+  color: white;
+  font-weight: lighter;
+  border-radius: .25em;
+}
+
+.input-login.valid input {
+  box-shadow: 0 0 2px 1px hsl(var(--valid-hsl))
+}
+
+.input-login.error input {
+  box-shadow: 0 0 2px 1px hsl(var(--error-hsl))
+}
+
+.input-login:focus {
+  box-shadow: 0 0 2px 1px hsl(var(--primary-hsl))
+}
+
+.input-login .msg {
+  display: none;
+  font-size: .75rem;
+}
+
+.input-login.valid .msg,
+.input-login.error .msg {
+  display: block;
+}
+
+.input-login.valid .msg {
+  color: hsl(var(--valid-hsl))
+}
+
+.input-login.error .msg {
+  color: hsl(var(--error-hsl))
+}
+
+.login-button {
+  padding: .5em 1em;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  color: white;
+  background-color: hsl(var(--primary-hsl), .25);
+  border: 1px solid hsl(var(--primary-hsl));
+  border-radius: .25em;
+  outline: none;
+  cursor: pointer;
+}
+
+.login-button:hover,
+.login-button:focus {
+  background-color: hsl(var(--primary-hsl), .4);
 }
