feature: AllProduct will return to top of page on each pagination tab and navBar tab selection. pagination pages will also adjust every time a new filter is added

--- a/public/src/nav.less
+++ b/public/src/nav.less
@@ -98,8 +98,8 @@
 }
 
 // making sure the nav bar does not squish on slightly smaller monitors
-@media screen and (max-width: 950px) {
-  #navBar {
+// @media screen and (max-width: 950px) {
+//   #navBar {
     
-  }
-}
+//   }
+// }
