--- a/public/src/style.less
+++ b/public/src/style.less
@@ -15,6 +15,11 @@ body {
   flex-direction: column;
 }
 
+// began styling for global page div
+.content {
+  margin: 0px 90px;
+}
+
 // nav bar styling
 @import "./nav.less";
 
@@ -65,7 +70,7 @@ body {
 
 @import "./pagination.less";
 
-.contentContainer {
+.productsContainer {
   width: 85vw;
   display: flex;
   flex-wrap: wrap;
