--- a/public/src/home.less
+++ b/public/src/home.less
@@ -1,16 +1,17 @@
-// began styling for homepage
-.content {
+#homepage {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0px 80px;
+}
+
+#homepage * {
+  margin: 0px;
 }
 
 // CSS FOR HOMEPAGE BANNER IMAGE
 #bannerImg {
   width: 100%;
-  height: 60%;
-  margin: 0px;
+  height: 100%;
   position: relative;
   z-index: 0;
 }
@@ -32,9 +33,15 @@
 #bannerInfo {
   background-color: rgb(182, 182, 182);
   width: 100%;
-  height: 200px;
+  height: 175px;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+}
+
+#bannerInfo > * {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
