--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,6 +12,9 @@ body {
   display: flex;
   flex-direction: column;
 }
+.content {
+  margin: 0px 90px;
+}
 #navBar,
 #footer {
   z-index: 1000;
@@ -83,16 +86,17 @@ body {
   justify-content: space-between;
   background-color: gray;
 }
-.content {
+#homepage {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0px 80px;
+}
+#homepage * {
+  margin: 0px;
 }
 #bannerImg {
   width: 100%;
-  height: 60%;
-  margin: 0px;
+  height: 100%;
   position: relative;
   z-index: 0;
 }
@@ -110,9 +114,14 @@ body {
 #bannerInfo {
   background-color: #b6b6b6;
   width: 100%;
-  height: 200px;
+  height: 175px;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+}
+#bannerInfo > * {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 #bannerInfo img {
@@ -237,7 +246,7 @@ body {
   box-shadow: none;
   color: #999;
 }
-.contentContainer {
+.productsContainer {
   width: 85vw;
   display: flex;
   flex-wrap: wrap;
