--- a/public/style/style.css
+++ b/public/style/style.css
@@ -127,6 +127,15 @@ body {
 #bannerInfo img {
   height: 80px;
 }
+#homeCards {
+  width: 100%;
+  padding: 15px 0px;
+}
+#homeCardsTitle {
+  padding: 8px;
+  font-weight: 500;
+  font-style: oblique;
+}
 .innerContainer {
   display: flex;
   flex-direction: column;
