--- a/public/src/home.less
+++ b/public/src/home.less
@@ -49,6 +49,18 @@
   height: 80px;
 }
 
+// CSS FOR CARDS LOADED ON HOME
+#homeCards {
+  width: 100%;
+  padding: 15px 0px;
+}
+
+#homeCardsTitle {
+  padding: 8px;
+  font-weight: 500;
+  font-style: oblique;
+}
+
 // @media screen and (min-width: 1115px) {
 //   #bannerShop {
 //     bottom: ;
