--- a/public/src/style.less
+++ b/public/src/style.less
@@ -1,6 +1,7 @@
 *,
 *::before,
 *::after {
+  background-color: #f0f0f8;
   margin: 0;
   box-sizing: border-box;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
