--- a/public/src/home.less
+++ b/public/src/home.less
@@ -37,6 +37,8 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 #bannerInfo > * {
@@ -52,13 +54,14 @@
 // CSS FOR CARDS LOADED ON HOME
 #homeCards {
   width: 100%;
-  padding: 15px 0px;
+  padding: 20px 0px;
 }
 
 #homeCardsTitle {
-  padding: 8px;
-  font-weight: 500;
+  padding: 12px;
+  font-weight: bolder;
   font-style: oblique;
+  text-decoration: underline;
 }
 
 // @media screen and (min-width: 1115px) {
