--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,6 +1,7 @@
 *,
 *::before,
 *::after {
+  background-color: #f0f0f8;
   margin: 0;
   box-sizing: border-box;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -25,7 +26,12 @@ body {
   top: 0px;
   display: flex;
   justify-content: space-between;
-  background-color: gray;
+  background-color: #ffcb05;
+}
+#navBar *,
+#footer * {
+  background-color: #ffcb05;
+  transition: 0.2s;
 }
 #navBar > *,
 #footer > * {
@@ -33,18 +39,29 @@ body {
   justify-content: space-evenly;
   height: 60px;
   padding: 15px 30px;
-  color: black;
+  color: #003a70;
+}
+#navBar a,
+#navBar a:visited {
+  color: #003a70;
 }
 #navBar > a {
-  padding: 5px 15px;
+  padding: 5px 20px;
+}
+#navBar img {
+  border-radius: 51%;
 }
 #navBar a:hover,
 #navBar li:hover,
-#footer a:hover {
-  background-color: green;
+#footer a:hover,
+#footer li:hover {
+  background-color: #003a70;
+  color: #70b8f0;
+  font-weight: 300;
 }
 #navBar li,
 #footer li {
+  height: 60px;
   display: inline-block;
   padding: 15px 30px;
 }
@@ -54,14 +71,13 @@ body {
   margin: 0;
 }
 #navBar li ul {
-  background-color: yellow;
+  background-color: #ffcb05;
   visibility: hidden;
   opacity: 0;
   position: absolute;
   margin-top: 25px;
   margin-left: -30px;
   display: none;
-  box-shadow: 2px 2px 2px 2px black;
 }
 #navBar li:hover > ul,
 #navBar li ul:hover {
@@ -71,20 +87,24 @@ body {
 }
 #navBar li ul li {
   clear: both;
-  width: 100%;
-}
-#footer,
-#footer li {
-  font-size: 12px;
-  height: 45px;
+  width: 50%;
+  height: 50px;
+  padding: 12px 0px;
 }
 #footer {
-  height: 60px;
+  font-size: 12px;
+  height: 50px;
   width: 100vw;
-  margin-top: auto;
   display: flex;
   justify-content: space-between;
-  background-color: gray;
+}
+#footer > * {
+  height: 50px;
+}
+#footer li {
+  height: 50px;
+  display: inline-block;
+  padding: 14px 30px;
 }
 #homepage {
   display: flex;
@@ -118,6 +138,8 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 #bannerInfo > * {
   display: flex;
@@ -129,12 +151,13 @@ body {
 }
 #homeCards {
   width: 100%;
-  padding: 15px 0px;
+  padding: 20px 0px;
 }
 #homeCardsTitle {
-  padding: 8px;
-  font-weight: 500;
+  padding: 12px;
+  font-weight: bolder;
   font-style: oblique;
+  text-decoration: underline;
 }
 .innerContainer {
   display: flex;
