feature: styling for nav (border-bottom added)

--- a/public/src/nav.less
+++ b/public/src/nav.less
@@ -20,6 +20,10 @@
   background-color: @navBarColor;
 }
 
+#navBar, #navBar > *, #navBar > ul > *, #navBar > ul > a > li {
+  border-bottom: 4px solid #a82028;
+}
+
 #navBar *, #footer * {
   background-color: @navBarColor;
   transition: 0.2s;
