--- a/public/src/home.less
+++ b/public/src/home.less
@@ -61,24 +61,63 @@ button#bannerShop:hover {
   border-bottom-right-radius: 20px;
 }
 
+#bannerInfo * {
+  background-color: rgb(182, 182, 182);
+}
+
 #bannerInfo > * {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 #bannerInfo img {
   height: 80px;
 }
 
+#bannerInfo div.storeInfo > * {
+  text-align: center;
+  margin: 7px;
+}
+
+#bannerButtons button {
+  font-size: 0.9em;
+  text-transform: uppercase;
+  width: 15vw;
+  margin: 14px 1vw;
+  padding: 5%;
+  box-shadow: 2px 2px 2px 2px @buttonColor1;
+  border: 3px solid @buttonColor0;
+  border-radius: 4px;
+  background-color: @buttonColor2;
+  color: @buttonColor0;
+  transition: 0.1s;
+}
+
+#bannerButtons button:hover {
+  font-size: 0.9em;
+  text-transform: uppercase;
+  font-weight: bold;
+  width: 15vw;
+  margin: 14px 1vw;
+  padding: 5%;
+  box-shadow: 2px 2px 2px 2px inset @buttonColor3;
+  border: 3px solid @buttonColor3;
+  border-radius: 4px;
+  background-color: #ffffff;
+  color: @buttonColor3;
+  transition: 0.1s;
+}
+
 // CSS FOR CARDS LOADED ON HOME
 #homeCards {
   width: 100%;
-  padding: 20px 0px;
+  padding: 10px 0px;
 }
 
 #homeCardsTitle {
-  padding: 12px;
+  padding: 15px;
   font-weight: bolder;
   font-style: oblique;
   text-decoration: underline;
