feature: getProducts added to useEffect in home

--- a/public/src/home.less
+++ b/public/src/home.less
@@ -117,10 +117,10 @@ button#bannerShop:hover {
 }
 
 #homeCardsTitle {
+  color: @buttonColor3;
   padding: 15px;
   font-weight: bolder;
   font-style: oblique;
-  text-decoration: underline;
 }
 
 // @media screen and (min-width: 1115px) {
