--- a/public/src/cardSmallView.less
+++ b/public/src/cardSmallView.less
@@ -1,11 +1,13 @@
 .innerContainer {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    // justify-content: space-evenly;
+    // align-items: center;
     width: 200px;
-    margin: 10px;
+    margin: 20px 10px;
 }
 
 .innerContainer img {
+    text-align: center;
     width: 180px;
 }
