--- a/public/style/cardSmallView.css
+++ b/public/style/cardSmallView.css
@@ -1,10 +1,10 @@
 .innerContainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   width: 200px;
-  margin: 10px;
+  margin: 20px 10px;
 }
 .innerContainer img {
+  text-align: center;
   width: 180px;
 }
