--- a/public/style/home.css
+++ b/public/style/home.css
@@ -16,12 +16,25 @@
   width: 100%;
 }
 #bannerShop {
+  font-weight: 500;
   font-size: 1.4em;
   padding: 13px;
   position: absolute;
   bottom: 50px;
   left: 45px;
   z-index: 1;
+}
+button#bannerShop {
+  box-shadow: 2px 2px 2px 2px inset #003a70;
+  border: 3px solid #003a70;
+  border-radius: 4px;
+  background-color: #c85048;
+  color: #ffcb05;
+  transition: 0.1s;
+}
+button#bannerShop:hover {
+  background-color: #3d7dca;
+  box-shadow: 2px 2px 2px 2px #003a70;
 }
 #bannerInfo {
   background-color: #b6b6b6;
@@ -30,21 +43,59 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+#bannerInfo * {
+  background-color: #b6b6b6;
 }
 #bannerInfo > * {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 #bannerInfo img {
   height: 80px;
 }
+#bannerInfo div.storeInfo > * {
+  text-align: center;
+  margin: 7px;
+}
+#bannerButtons button {
+  font-size: 0.9em;
+  text-transform: uppercase;
+  width: 15vw;
+  margin: 14px 1vw;
+  padding: 5%;
+  box-shadow: 2px 2px 2px 2px #3d7dca;
+  border: 3px solid #003a70;
+  border-radius: 4px;
+  background-color: #ffcb05;
+  color: #003a70;
+  transition: 0.1s;
+}
+#bannerButtons button:hover {
+  font-size: 0.9em;
+  text-transform: uppercase;
+  font-weight: bold;
+  width: 15vw;
+  margin: 14px 1vw;
+  padding: 5%;
+  box-shadow: 2px 2px 2px 2px inset #c85048;
+  border: 3px solid #c85048;
+  border-radius: 4px;
+  background-color: #ffffff;
+  color: #c85048;
+  transition: 0.1s;
+}
 #homeCards {
   width: 100%;
-  padding: 15px 0px;
+  padding: 10px 0px;
 }
 #homeCardsTitle {
-  padding: 8px;
-  font-weight: 500;
+  color: #c85048;
+  padding: 15px;
+  font-weight: bolder;
   font-style: oblique;
 }
