--- a/public/src/cardSmallView.less
+++ b/public/src/cardSmallView.less
@@ -1,10 +1,10 @@
-.innerContainer {
+.innerContainer, #homeCards .innerContainer {
     display: flex;
     flex-direction: column;
     // justify-content: space-evenly;
     // align-items: center;
     width: 200px;
-    margin: 20px 10px;
+    margin: 15px 8px;
 }
 
 .innerContainer img {
