--- a/public/style/style.css
+++ b/public/style/style.css
@@ -220,11 +220,12 @@ button#bannerShop:hover {
   font-weight: bolder;
   font-style: oblique;
 }
-.innerContainer {
+.innerContainer,
+#homeCards .innerContainer {
   display: flex;
   flex-direction: column;
   width: 200px;
-  margin: 20px 10px;
+  margin: 15px 8px;
 }
 .innerContainer img {
   text-align: center;
