bug fixed: footer positioning finally...

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -17,6 +17,7 @@
 }
 
 body {
+  position: relative;
   overflow-y: auto;
   overflow-x: hidden;
   min-height: 100vh;
@@ -27,6 +28,7 @@ body {
 // began styling for global page div
 .content {
   margin: 0px 90px;
+  min-height: 100vh;
 }
 
 // nav bar styling
