--- a/public/src/nav.less
+++ b/public/src/nav.less
@@ -7,8 +7,7 @@
 @navTextColor: #003a70;
 
 // makes sure the nav bar stays at the top of the page
-#navBar,
-#footer {
+#navBar {
   z-index: 1000;
   text-align: center;
   max-width: 100vw;
@@ -107,6 +106,13 @@
 
 // styling for footer ONLY
 #footer {
+  z-index: 1000;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  background-color: @navBarColor;
+  position: sticky;
+  bottom: 0;
   font-size: 12px;
   height: 50px;
   width: 100vw;
