--- a/public/style/style.css
+++ b/public/style/style.css
@@ -14,6 +14,7 @@
   --error-hsl: 0, 60%, 50%;
 }
 body {
+  position: relative;
   overflow-y: auto;
   overflow-x: hidden;
   min-height: 100vh;
@@ -22,9 +23,9 @@ body {
 }
 .content {
   margin: 0px 90px;
+  min-height: 100vh;
 }
-#navBar,
-#footer {
+#navBar {
   z-index: 1000;
   text-align: center;
   max-width: 100vw;
@@ -105,6 +106,11 @@ body {
   padding: 12px 0px;
 }
 #footer {
+  z-index: 1000;
+  text-align: center;
+  background-color: #ffcb05;
+  position: sticky;
+  bottom: 0;
   font-size: 12px;
   height: 50px;
   width: 100vw;
