--- a/public/src/filterOptions.less
+++ b/public/src/filterOptions.less
@@ -2,11 +2,14 @@
 @pageHeight: 100%;
 
 #filters-screen {
+    background-color: transparent;
     width: 100vw;
     height: 100vh;
     display: none;
     position: fixed;
     top: 0px;
+    left: 0px;
+    z-index: 1001;
     margin: 0;
 }
 
@@ -20,8 +23,8 @@
 
 #filters-overlay {
     width: 60vw;
-    background-color: black;
-    opacity: 0.5;
+    background-color: grey;
+    opacity: 0.5!important;
 }
 
 .optionsOuter {
