--- a/public/style/filterOptions.css
+++ b/public/style/filterOptions.css
@@ -1,9 +1,12 @@
 #filters-screen {
+  background-color: transparent;
   width: 100vw;
   height: 100vh;
   display: none;
   position: fixed;
   top: 0px;
+  left: 0px;
+  z-index: 1001;
   margin: 0;
 }
 #filters-form {
@@ -15,8 +18,8 @@
 }
 #filters-overlay {
   width: 60vw;
-  background-color: black;
-  opacity: 0.5;
+  background-color: grey;
+  opacity: 0.5 !important;
 }
 .optionsOuter {
   margin: 3%;
