--- a/public/style/style.css
+++ b/public/style/style.css
@@ -267,11 +267,35 @@ button#bannerShop:hover {
   justify-content: space-evenly;
 }
 .optionsHeader {
+  padding: 5px;
   width: 100%;
 }
 .optionsCheckbox {
   width: 30%;
   padding: 2% 0px;
+}
+.optionsCheckbox label {
+  margin-left: 3px;
+}
+#filter-buttons {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 65px;
+}
+#filter-buttons > * {
+  padding: 10px;
+  width: 80px;
+  color: #3D7DCA;
+  background-color: #FFCB05;
+  border: 4px solid #003A70;
+  transition: 0.2s;
+}
+#filter-buttons > *:hover {
+  border: 4px solid #3D7DCA;
+  color: #FFCB05;
+  background-color: #003A70;
 }
 .singleProductContainer {
   display: flex;
