styling: cursor becomes pointer on hover

--- a/public/src/filterOptions.less
+++ b/public/src/filterOptions.less
@@ -1,6 +1,21 @@
 @navHeight: 60px;
 @pageHeight: 100%;
 
+#productsTitle {
+    margin: 12px;
+}
+
+.filtersPrompt {
+    display: flex;
+}
+.filtersPrompt > * {
+    margin: 8px;
+}
+
+#selected-filters {
+    margin: 12px;
+}
+
 #filters-screen {
     background-color: transparent;
     width: 100vw;
