--- a/public/src/style.less
+++ b/public/src/style.less
@@ -31,6 +31,10 @@ body {
   min-height: 100vh;
 }
 
+button:hover, a:hover, input:hover {
+  cursor: pointer;
+}
+
 // nav bar styling
 @import "./nav.less";
 
