--- a/public/src/filterOptions.less
+++ b/public/src/filterOptions.less
@@ -16,6 +16,14 @@
     margin: 12px;
 }
 
+#filterButton {
+    padding: 5px 8px;
+    background-color: #C85048;
+    color: #FFCB05;
+    border: none;
+    border-radius: 6px;
+}
+
 #filters-screen {
     background-color: transparent;
     width: 100vw;
