--- a/public/src/style.less
+++ b/public/src/style.less
@@ -119,6 +119,11 @@ button:hover, a:hover, input:hover {
   }
 }
 
+.login-container * {
+  --color: hsl(var(--primary-dark-hsl), .8);
+  background-color: var(--color);
+}
+
 .login-title {
   margin: 0;
   color: white;
@@ -215,4 +220,32 @@ button:hover, a:hover, input:hover {
 .login-button:hover,
 .login-button:focus {
   background-color: hsl(var(--primary-hsl), .4);
+}
+
+
+
+.cartCardView {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  margin: 15px 8px;
+}
+
+.cartCardView img {
+  text-align: center;
+  width: 180px;
+}
+
+#cartInfo {
+  margin: 50px;
+}
+
+#cartInfo button {
+  margin: 10px;
+  padding: 8px;
+}
+
+#cartWrapper {
+  display: flex;
+  justify-content: space-evenly;
 }
